--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@nuxt/fonts": "^0.6.1",
     "@nuxt/ui": "^2.15.2",
     "@nuxthub/core": "^0.5.14",
-    "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.7",
     "@types/turndown": "^5.0.4",
     "@vueuse/nuxt": "^10.9.0",
     "changelogen": "^0.5.5",
+    "linkedom": "^0.16.11",
     "nuxt": "^3.11.2",
     "turndown": "^7.1.3",
     "typescript": "5.4.5",
@@ -33,7 +33,6 @@
     "vue-router": "^4.3.2"
   },
   "dependencies": {
-    "jsdom": "^24.0.0",
     "wrangler": "^3.52.0"
   },
   "overrides": {
